fixed weird overflow problem

--- a/gui/partial/discussion/discussion.less
+++ b/gui/partial/discussion/discussion.less
@@ -6,6 +6,12 @@
 @lp-primary: 	#42d0e5; //blue
 @lp-secondary: 	#5ccb6a; //green
 
+.discussion-wrapper{
+	margin-top: -55px;
+	padding-top: 55px;
+	height: 100%;
+}
+
 #messaging {
 	&.checklist-wrapper {
 		background-color:white;
